# smart_ocr

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cc
include/smart_ocr/: check_sum.h  line.h  sequence.h
include/utils/: str_utils.h
src/smart_ocr/: check_sum.cc  line.cc  sequence.cc
src/utils/: str_utils.cc
test/: CMakeLists.txt  sequence_test.cc
